trustfall_core/src/resources/test_data/parse_errors/multiple_roots.parse-error.ron
Err(MultipleQueryRoots(Pos(
  line: 6,
  column: 5,
)))
